fix(style): auto width problem caused by too long tags or site t… (#168)

--- a/assets/css/_core/_media.scss
+++ b/assets/css/_core/_media.scss
@@ -11,12 +11,6 @@
 }
 
 @media only screen and (max-width: 960px) {
-  #header-desktop {
-    .header-wrapper {
-      padding: 0 1rem;
-    }
-  }
-
   .page {
     max-width: 80%;
 
